--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "husky": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.5.1",
-    "typescript": "~4.1.5",
-    "husky": "^7.0.0"
+    "typescript": "~4.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
