--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.3",
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "element-plus": "^2.1.2",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
