feat(request): 封装axios请求

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL='http://localhost:8080/base/dev'
+VUE_APP_BASE_URL='http://123.207.32.32:8000'
 VUE_APP_RESOURCE_URL='http://localhost:8080/resourse/dev'
