--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "countup.js": "^2.1.0",
     "dayjs": "^1.11.0",
+    "echarts": "^5.3.1",
     "element-plus": "^2.1.2",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
