--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dayjs": "^1.11.0",
     "echarts": "^5.3.1",
     "element-plus": "^2.1.2",
+    "highlight.js": "^11.5.0",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "wangeditor": "^4.7.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
