--- a/package.json
+++ b/package.json
@@ -43,16 +43,18 @@
     "babel-plugin-import": "^1.13.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^6.7.2",
+    "eslint": "7.32.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "8.0.0",
     "husky": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.5.1",
+    "style-resources-loader": "^1.5.0",
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.6.6",
-    "unplugin-vue-components": "^0.18.0"
+    "unplugin-vue-components": "^0.18.0",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5"
   },
   "config": {
     "commitizen": {
