--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,6 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "suppressImplicitAnyIndexErrors": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
   "exclude": ["node_modules"]
 }
