--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "highlight.js": "^11.5.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.14",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "wangeditor": "^4.7.13"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.17.12",
+    "@babel/plugin-proposal-optional-chaining": "^7.17.12",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -49,6 +52,7 @@
     "eslint-plugin-vue": "8.0.0",
     "husky": "^7.0.0",
     "less": "^3.0.4",
+    "compression-webpack-plugin": "^6.1.1",
     "less-loader": "^5.0.0",
     "prettier": "^2.5.1",
     "style-resources-loader": "^1.5.0",
